unpackaged/main/default/objects/Leadership_Forecast_Call__c/Leadership_Forecast_Call__c.object-meta.xml
<CustomObject>
    <label>Leadership Forecast Call</label>
    <nameField>
        <label>Leadership Forecast Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leadership Forecast Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>