unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Call_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Call_Quarter__c</fullName>
    <label>Call Quarter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024-Q2</fullName>
            </value>
            <value>
                <fullName>2024-Q3</fullName>
            </value>
            <value>
                <fullName>2024-Q4</fullName>
            </value>
            <value>
                <fullName>2025-Q1</fullName>
            </value>
            <value>
                <fullName>2025-Q2</fullName>
            </value>
            <value>
                <fullName>2025-Q3</fullName>
            </value>
            <value>
                <fullName>2025-Q4</fullName>
            </value>
            <value>
                <fullName>2026-Q1</fullName>
            </value>
            <value>
                <fullName>2026-Q2</fullName>
            </value>
            <value>
                <fullName>2026-Q3</fullName>
            </value>
            <value>
                <fullName>2026-Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>