unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/CC_Actual_QTD__c.field-meta.xml
<CustomField>
    <fullName>CC_Actual_QTD__c</fullName>
    <label>C&amp;C Actual (QTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>