unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/CC_Call_Mid__c.field-meta.xml
<CustomField>
    <fullName>CC_Call_Mid__c</fullName>
    <label>C&amp;C Call (Mid)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>