unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Forecast_Week__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Week__c</fullName>
    <label>Forecast Week</label>
    <required>true</required>
    <type>Date</type>
</CustomField>