unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Forecast_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Week_Number__c</fullName>
    <formula>CEILING(((Forecast_Week__c - DATE(YEAR(Forecast_Week__c), 1, 1) + 1) +
MOD(DATE(YEAR(Forecast_Week__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>