unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Notes_High__c.field-meta.xml
<CustomField>
    <fullName>Notes_High__c</fullName>
    <label>Notes (High)</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>