unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Notes_Low__c.field-meta.xml
<CustomField>
    <fullName>Notes_Low__c</fullName>
    <label>Notes (Low)</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>