unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/Notes_Mid__c.field-meta.xml
<CustomField>
    <fullName>Notes_Mid__c</fullName>
    <label>Notes (Mid)</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>