unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/NUE_Actual_QTD__c.field-meta.xml
<CustomField>
    <fullName>NUE_Actual_QTD__c</fullName>
    <label>NUE Actual (QTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>