unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/NUE_Call_Low__c.field-meta.xml
<CustomField>
    <fullName>NUE_Call_Low__c</fullName>
    <label>NUE Call (Low)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>