unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/NUE_Create_Close_Estimate__c.field-meta.xml
<CustomField>
    <fullName>NUE_Create_Close_Estimate__c</fullName>
    <label>NUE Create &amp; Close Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>