unpackaged/main/default/objects/Leadership_Forecast_Call__c/fields/NUE_Open_Pipeline_Weighted__c.field-meta.xml
<CustomField>
    <fullName>NUE_Open_Pipeline_Weighted__c</fullName>
    <label>NUE Open Pipeline (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>